# c--3DEngine

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
3rd/: include_3rds.cmake
3rd/fmod/: cmakelists.txt
3rd/glad/: CMakelists.txt
3rd/glad/src/: glad.c
3rd/rapidjson/: CMakeLists.txt
3rd/sdl/: find_sdl2.cmake
3rd/sdl2-image/: find_sdl2_image.cmake
3rd/sdl2_ttf/: find_SDL_ttf.cmake
3rd/stb_image/: Cmakelists.txt  stb_image.cpp
Assets/: AnMaster.bank  AnMaster.strings.bank
Linmeng/: CMakelists.txt  main.cpp
Linmeng/pureHead/: defines.h  pch.h
Linmeng/src/: BGSpriteComponent.cpp  BGSpriteComponent.h  Ship.cpp  Ship.h  actor.cpp  actor.h  animSpriteComponent.cpp  animSpriteComponent.h  asteroid.cpp  asteroid.h  circleComponent.cpp  circleComponent.h  component.h  game.cpp  game.h  inputComponent.cpp  laser.cpp  laser.h  main.cpp  math.cpp  math.h  moveComponent.cpp  moveComponent.h  spriteComponent.cpp  spriteComponent.h  tileMapComponent.cpp  tileMapComponent.h  vector.h
Linmeng/src/AIState/: AIAttack.cpp  AIAttack.h  AIDeath.cpp  AIDeath.h  AIPatrol.cpp  AIPatrol.h  AIState.h
Linmeng/src/Actor/: Ship.cpp  Ship.h  actor.cpp  actor.h  asteroid.cpp  cameraActor.cpp  cameraActor.h  debugActor.cpp  debugActor.h  followActor.cpp  followActor.h  fpsActor.cpp  fpsActor.h  orbitActor.cpp  orbitActor.h  planeActor.cpp  planeActor.h
Linmeng/src/Audio/: audioSystem.cpp  (+3 more)
Shaders/: basicMesh.frag  basicMesh.vert  phong.frag  phong.vert  sprite.frag  sprite.vert
engine/: CMakelists.txt
test/: Cmakelists.txt  fmod_playsound.cpp  utils_color.cpp
(+59 files in other folders)
